--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,15 @@ Menurut beberapa saksi, pria itu dikenal ramah, sopan, dan tidak merasa risih sa
 
 Banyak warganet mengungkapkan kekagumannya, bahkan tak sedikit yang mencoba mencari tahu identitas pria tersebut. “Wajahnya benar-benar seperti aktor drama, sulit percaya kalau dia orang biasa,” tulis salah satu komentar yang mendapatkan banyak tanda suka.
 
+Menurut beberapa saksi, pria itu dikenal ramah, sopan, dan tidak merasa risih saat ada yang meminta berfoto. Hingga kini, belum ada informasi lebih lanjut mengenai latar belakangnya.
+    Seorang pria mendadak menjadi pusat perhatian masyarakat setelah penampilannya yang disebut-sebut sangat ganteng viral di media sosial. Foto-foto dirinya pertama kali tersebar melalui unggahan warganet di sebuah kafe, lalu dalam hitungan jam sudah mendapatkan ribuan komentar dan dibagikan puluhan ribu kali.
+
+Banyak warganet mengungkapkan kekagumannya, bahkan tak sedikit yang mencoba mencari tahu identitas pria tersebut. “Wajahnya benar-benar seperti aktor drama, sulit percaya kalau dia orang biasa,” tulis salah satu komentar yang mendapatkan banyak tanda suka.
+
+Menurut beberapa saksi, pria itu dikenal ramah, sopan, dan tidak merasa risih saat ada yang meminta berfoto. Hingga kini, belum ada informasi lebih lanjut mengenai latar belakangnya.
+    Seorang pria mendadak menjadi pusat perhatian masyarakat setelah penampilannya yang disebut-sebut sangat ganteng viral di media sosial. Foto-foto dirinya pertama kali tersebar melalui unggahan warganet di sebuah kafe, lalu dalam hitungan jam sudah mendapatkan ribuan komentar dan dibagikan puluhan ribu kali.
+
+Banyak warganet mengungkapkan kekagumannya, bahkan tak sedikit yang mencoba mencari tahu identitas pria tersebut. “Wajahnya benar-benar seperti aktor drama, sulit percaya kalau dia orang biasa,” tulis salah satu komentar yang mendapatkan banyak tanda suka.
+
 Menurut beberapa saksi, pria itu dikenal ramah, sopan, dan tidak merasa risih saat ada yang meminta berfoto. Hingga kini, belum ada informasi lebih lanjut mengenai latar belakangnya.</string>
 </resources>
